--- a/views/index.hbs
+++ b/views/index.hbs
@@ -52,6 +52,10 @@
                 {{#if successMessage}}
                 <div class="alert alert-success">{{successMessage}}</div>
                 {{/if}}
+                <div class="alert">
+                    <span class="closebtn" onclick="closeAlert()">&times;</span>
+                    This is a dismissible alert.
+                </div>
                 <h1>Register</h1>
                 <!-- Register form -->
                 <form action="/" method="post" id="registration-form">
