--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,11 @@
                     <li class="tab is-active"><a data-switcher data-tab="1">Home</a></li>
                     <li class="tab"><a data-switcher data-tab="2">Dashboard</a></li>
                     <li class="tab"><a data-switcher data-tab="3">Grade Calculator</a></li>
-                    <li class="tab"><a data-switcher data-tab="4">Login/Register</a></li>
+                    <% if (typeof name == "undefined" ) { %>
+                        <li class="tab"><a data-switcher data-tab="4">Login/Register</a></li>
+                        <% } else { %>
+                            <li class="tab"><a data-switcher data-tab="5">My Account</a></li>
+                        <% } %>
                 </ul>
             </nav>
         </div>
@@ -33,11 +37,11 @@
         <section class="pages">
             <div class="page is-active" data-page="1">
                 <h2>Page 1</h2>
-                <% if (typeof name !== "undefined") { %>
+                <% if (typeof name !=="undefined" ) { %>
                     <p>Welcome, <%= name %>!</p>
-                  <% } else { %>
-                    <p>Please log in to continue.</p>
-                  <% } %>
+                <% } else { %>
+                        <p>Please log in to continue.</p>
+                <% } %>
             </div>
             <div class="page" data-page="2">
                 <h2>Page 2</h2>
@@ -93,6 +97,9 @@
                         <button type="submit" class="loginbtn">Login</button>
                     </div>
                 </form>
+            </div>
+            <div class="page" data-page="5">
+                <a id="logout" href="/logout">Logout</a>
             </div>
         </section>
     </main>
