--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,11 @@
                     <li class="tab is-active"><a data-switcher data-tab="1">Home</a></li>
                     <li class="tab"><a data-switcher data-tab="2">Dashboard</a></li>
                     <li class="tab"><a data-switcher data-tab="3">Grade Calculator</a></li>
-                    <% if (typeof name == "undefined" ) { %>
+                    <% if (typeof name=="undefined" ) { %>
                         <li class="tab"><a data-switcher data-tab="4">Login/Register</a></li>
                         <% } else { %>
                             <li class="tab"><a data-switcher data-tab="5">My Account</a></li>
-                        <% } %>
+                            <% } %>
                 </ul>
             </nav>
         </div>
@@ -40,7 +40,7 @@
                 <% if (typeof name !=="undefined" ) { %>
                     <p>Welcome, <%= name %>!</p>
                 <% } else { %>
-                        <p>Please log in to continue.</p>
+                    <p>Please log in to continue.</p>
                 <% } %>
             </div>
             <div class="page" data-page="2">
@@ -98,8 +98,31 @@
                     </div>
                 </form>
             </div>
+            <!-- My Account page :  -->
             <div class="page" data-page="5">
                 <a id="logout" href="/logout">Logout</a>
+                <h2 id="text">Your Account info</h2>
+                <div id="alertAccountEdit">
+                    <span class="closebtn" onclick="closeAlert()">&times;</span>
+                    This is a dismissible alert.
+                </div>
+                <form action="/" method="post" id="account_info_form">
+                    <div class="container">
+                        <!-- Name : -->
+                        <label for="name-edit"><b><i>Your name</i></b></label>
+                        <input type="text" placeholder="<%= name %>" name="name-edit" id="name-edit">
+                        <!-- Email : -->
+                        <label for="email-eidt"><b><i>Email</i></b></label>
+                        <input type="text" placeholder="<%= email %>" name="email-edit" id="email-edit">
+                        <!-- Password -->
+                        <label for="password-eidt"><b><i>Password</i></b></label>
+                        <input type="password" placeholder="<%= password %>" name="password-edit" id="password-edit">
+                        <!-- Password -->
+                        <label for="age-eidt"><b><i>Age</i></b></label>
+                        <input type="age" readonly placeholder="<%= age %>" name="age-edit" id="age-edit">
+                        <button type="submit" id="editbtn">Edit</button>
+                    </div>
+                </form>
             </div>
         </section>
     </main>
