The My Account page is done for now. There are some things left in it but they are not that important so I'll handle them later like profile picture

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,7 +101,7 @@
             <!-- My Account page :  -->
             <div class="page" data-page="5">
                 <a id="logout" href="/logout">Logout</a>
-                <h2 id="text">Your Account info</h2>
+                <h2 style="margin-bottom: 10px;" id="text">Your Account info</h2>
                 <div id="alertAccountEdit">
                     <span class="closebtn" onclick="closeAlert()">&times;</span>
                     This is a dismissible alert.
